--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <meta property="og:description" content="了解你的性格类型，探索真实的自己">
   <meta property="og:type" content="website">
   <title>MBTI性格测试</title>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="stylesheet" href="/src/styles.css">
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
+  <link rel="stylesheet" href="./src/styles.css">
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 </html>
